--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <title>Arma tu Combo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -118,12 +119,12 @@
           background-color: #000;
         }
     </style>
-    <title>Galería de Productos</title>
+    
 </head>
 <body>
 
+  <h1>Arma tu Combo</h1>
   <div class="gallery_container">
-
     <div class="gallery" id="gallery">
         <!-- Cards de la galería -->
         <div class="card" data-title="Yamaha MT-09A-ABS" data-price="12990">
