--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <style>
+      html {
+        overflow-x: hidden;
+      }
         body {
           font-family: 'Bebas Neue', sans-serif;
             text-align: center;
@@ -18,6 +21,7 @@
             height: 100vh;
             color: #000;
             margin: 20px 0;
+            overflow-x: hidden;
         }
         h1 {
           margin-bottom: 0;
@@ -36,7 +40,7 @@
           border: 0;
           padding: 2px 0 0 10px;
           height: 30px;
-          margin: -1px 0 2px 0;
+          margin: 5px 0 5px 0;
           font-weight: 700;
           font-size: 18px;
           text-align: center;
@@ -52,7 +56,7 @@
           font-weight: 900;
           border-radius: 15px;
           position: absolute;
-          margin-top: -1px;
+          margin-top: 5px;
           margin-left: -19px;
           cursor: pointer;
       }
@@ -120,6 +124,7 @@
         .card h3 {
           margin-top: -36px;
           text-align: left;
+          font-size: 1.5em;
         }
         .card img {
           max-width: 100%;
