Fix Reset Button

--- a/index.html
+++ b/index.html
@@ -50,14 +50,13 @@
         }
 
         button#resetSearch {
-          background: #fff;
+          background: #f5f5f5;
           border: 0;
           padding: 8px 18px;
           font-weight: 900;
           border-radius: 15px;
-          position: absolute;
-          margin-top: 5px;
-          margin-left: -19px;
+          font-size: 19px;
+          display: inline-block;
           cursor: pointer;
       }
       button#resetSearch:hover {
@@ -136,7 +135,7 @@
 
         .card:hover {
             opacity: 1;
-            box-shadow: 0 0 18px #004a6e;
+            box-shadow: 0 0 18px #00496e87;
             transition: all 0.8s ease;
         }
 
