--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             text-align: center;
             height: 100vh;
             color: #000;
-            margin: 20px 0;
+            margin: 0;
             overflow-x: hidden;
         }
         h1 {
