--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         body {
           font-family: 'Bebas Neue', sans-serif;
             text-align: center;
-            /* background: url(https://go.rifarito.com/assets/images/background.png) #fff center center fixed; */
-            background: #f5f5f5;
+            background: url(https://static.vecteezy.com/system/resources/previews/006/469/230/large_2x/abstract-white-and-gray-light-gradient-lines-background-free-vector.jpg) #fff center center fixed;
+            /* background: #f5f5f5; */
             background-size: cover;
             text-align: center;
             height: 100vh;
